[package]
name = "beam"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
core-foundation = "0.10.0"
core-foundation-sys = "0.8.7"
serde = {version = "1.0.214", features = ["derive"]}
serde_json = "1.0.132"
sqlx = { version = "0.7.4", features = ["tls-rustls", "runtime-tokio", "postgres", "macros", "uuid", "time", "json"] }
dotenv = "0.15.0"
url = "2.5.3"
chrono = "0.4.38"
colored = "2.2.0"
anyhow = "1.0.98"
base64 = "*"
image = "*"

[dev-dependencies]
mockall = "0.13.1"
mockall_derive = "0.13.1"
